--- a/platforms/package.json
+++ b/platforms/package.json
@@ -35,6 +35,7 @@
     "@guildxyz/sdk": "^2.5.0",
     "@holonym-foundation/human-id-sdk": "^0.0.9",
     "@spruceid/didkit-wasm": "^0.3.0-alpha0",
+    "@zk-email/sdk": "1.4.0-17",
     "axios": "^1.7.9",
     "bignumber.js": "^9.1.2",
     "ethers": "^6.13.4",
