--- a/app/package.json
+++ b/app/package.json
@@ -32,8 +32,8 @@
     "@headlessui/react": "^1.7.13",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.17",
+    "@human.tech/passport-embed": "^0.2.2",
     "@intercom/messenger-js-sdk": "^0.0.13",
-    "@passportxyz/passport-embed": "https://github.com/passportxyz/passport-embed.git#v0.1.6-rc.4",
     "@popperjs/core": "^2.11.8",
     "@reown/appkit": "=1.5.0",
     "@reown/appkit-adapter-wagmi": "=1.5.0",
