--- a/app/package.json
+++ b/app/package.json
@@ -32,7 +32,8 @@
     "@headlessui/react": "^1.7.13",
     "@headlessui/tailwindcss": "^0.1.3",
     "@heroicons/react": "^2.0.17",
-    "@human.tech/passport-embed": "^0.2.2",
+    "@human.tech/passport-embed": "https://github.com/passportxyz/passport-embed.git#v0.3.0-beta3",
+    "@intercom/messenger-js-sdk": "^0.0.13",
     "@intercom/messenger-js-sdk": "^0.0.18",
     "@popperjs/core": "^2.11.8",
     "@reown/appkit": "=1.5.0",
