fix(app): resolve TopNav build errors and add click-outside detection
- Add onClose prop to TopNav component interface
- Implement click-outside detection using useRef and useEffect
- Exclude Storybook files (*.stories.tsx) from TypeScript build compilation
- Fix TypeScript module resolution issues for Storybook imports

The TopNav now properly closes when users click outside of it, improving UX.
Build process now successfully excludes development-only Storybook files.

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -24,7 +24,7 @@
     "jest.config.ts",
     "jest.setup.ts"
   ],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "**/*.stories.ts", "**/*.stories.tsx"],
   "ts-node": {
     "esm": true,
     "compilerOptions": {
