--- a/app/package.json
+++ b/app/package.json
@@ -21,8 +21,6 @@
     "@coinbase/wallet-sdk": "^4.2.0",
     "@datadog/browser-logs": "^4.11.2",
     "@datadog/browser-rum": "^4.11.2",
-    "@didtools/cacao": "^3.0.1",
-    "@didtools/pkh-ethereum": "^0.6.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@ethereum-attestation-service/eas-sdk": "^2.7.0",
@@ -42,9 +40,8 @@
     "@silk-wallet/silk-wallet-sdk": "^0.7.1",
     "@tanstack/react-query": "^5.59.20",
     "broadcast-channel": "^4.11.0",
-    "did-session": "^4.0.0",
-    "dids": "^5.0.2",
     "dompurify": "^3.0.11",
+    "siwe": "^2.1.4",
     "framer-motion": "^6.3.0",
     "html-react-parser": "^5.1.9",
     "jotai": "^2.5.0",
@@ -113,9 +110,7 @@
   "resolutions": {
     "csstype": "3.0.10",
     "lit": "^3.1.0",
-    "leveldown": "6.1.1",
-    "did-session/uint8arrays": "^5.1.0",
-    "dids/uint8arrays": "^5.1.0"
+    "leveldown": "6.1.1"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.7",
