--- a/embed/package.json
+++ b/embed/package.json
@@ -31,6 +31,7 @@
     "express": "4",
     "express-rate-limit": "^7.5.0",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^2.4.0",
     "pino": "^9.6.0",
     "rate-limit-redis": "^4.2.0",
@@ -42,6 +43,7 @@
     "@babel/preset-env": "^7.23.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/luxon": "^2.3.2",
     "@types/node": "16",
     "@types/node-fetch": "latest",
