--- a/iam/package.json
+++ b/iam/package.json
@@ -39,6 +39,7 @@
     "ethers": "^6.13.4",
     "express": "4",
     "google-auth-library": "^7.14.1",
+    "jsonwebtoken": "^9.0.2",
     "luxon": "^2.4.0",
     "moralis": "^2.24.2",
     "multiformats": "^9.9.0",
@@ -55,6 +56,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/luxon": "^2.3.2",
     "@types/node": "16",
     "@types/node-fetch": "latest",
