feat(platforms): add Steam Gaming Credentials stamp

--- a/iam/.env-example.env
+++ b/iam/.env-example.env
@@ -23,6 +23,7 @@ LINKEDIN_CALLBACK=http://localhost:3000/
 DISCORD_CLIENT_ID=MY_APP_CLIENT_ID
 DISCORD_CLIENT_SECRET=MY_APP_CLIENT_SECRET
 DISCORD_CALLBACK=MY_APP_CALLBACK
+STEAM_API_KEY=your_steam_api_key_here
 COINBASE_CLIENT_ID=MY_COINBASE_CLIENT_ID
 COINBASE_CLIENT_SECRET=MY_COINBASE_CLIENT_SECRET
 COINBASE_CALLBACK=http://localhost:3000/
