--- a/app/.env-example.env
+++ b/app/.env-example.env
@@ -10,6 +10,8 @@ NEXT_PUBLIC_PASSPORT_LINKEDIN_CLIENT_ID_V2=12345678
 NEXT_PUBLIC_PASSPORT_LINKEDIN_CALLBACK=http://localhost:3000/
 NEXT_PUBLIC_PASSPORT_DISCORD_CLIENT_ID=12345678
 NEXT_PUBLIC_PASSPORT_DISCORD_CALLBACK=http://localhost:3000/
+NEXT_PUBLIC_PASSPORT_STEAM_CALLBACK=http://localhost:3000/
+NEXT_PUBLIC_PASSPORT_STEAM_REALM=http://localhost:3000/
 NEXT_PUBLIC_PASSPORT_COINBASE_CLIENT_ID=123456789
 NEXT_PUBLIC_PASSPORT_COINBASE_CALLBACK=http://localhost:3000/
 NEXT_PUBLIC_PASSPORT_IDENA_CALLBACK=http://localhost:3000/
