fix(infra): bundle auto-credits Lambda with esbuild to fix deployment
Pulumi's AssetArchive was choking on the 70MB node_modules directory
(mostly ethers), causing a RangeError: Invalid string length during
deployment. Switch from tsc to esbuild bundling so all dependencies are
compiled into a single ~960KB file, eliminating the need to ship
node_modules. Mark @aws-sdk/* as external since it's built into the
Lambda Node.js 18 runtime.

--- a/infra/scripts/auto_credits/package.json
+++ b/infra/scripts/auto_credits/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "esbuild src/index.ts --bundle --platform=node --target=node18 --outfile=dist/index.js --external:@aws-sdk/*",
     "clean": "rm -rf dist",
     "test": "jest",
     "run:local": "ts-node run.ts"
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
+    "esbuild": "^0.25.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
