fix(infra): add auto-credits build step to CI deploy workflow
The auto-credits Lambda dist/ is gitignored, so it doesn't exist in CI.
Pulumi's FileArchive then fails on the missing directory, causing the
RangeError: Invalid string length crash. Add npm install + build step
for auto_credits in both preview and deploy jobs, matching the existing
pattern used for verifier_sweep.

--- a/.github/workflows/build_and_deploy_generic.yml
+++ b/.github/workflows/build_and_deploy_generic.yml
@@ -147,6 +147,11 @@ jobs:
           cd infra/scripts/verifier_sweep
           yarn install --frozen-lockfile
           yarn build
+      - name: Build Auto Credits Service
+        run: |
+          cd infra/scripts/auto_credits
+          npm install
+          npm run build
       - name: Prepare to Deploy to AWS
         uses: passportxyz/gh-workflows/.github/actions/prepare_deploy_to_aws@v3
       - name: Deploy Preview
@@ -231,6 +236,11 @@ jobs:
           cd infra/scripts/verifier_sweep
           yarn install --frozen-lockfile
           yarn build
+      - name: Build Auto Credits Service
+        run: |
+          cd infra/scripts/auto_credits
+          npm install
+          npm run build
       - name: Prepare to Deploy to AWS
         uses: passportxyz/gh-workflows/.github/actions/prepare_deploy_to_aws@v3
       - name: Deploy to AWS
