--- a/.github/workflows/deploy_generic.yml
+++ b/.github/workflows/deploy_generic.yml
@@ -116,6 +116,11 @@ jobs:
           cd infra/scripts/verifier_sweep
           yarn install --frozen-lockfile
           yarn build
+      - name: Build Auto Credits Service
+        run: |
+          cd infra/scripts/auto_credits
+          npm install
+          npm run build
       - name: Prepare to Deploy to AWS
         uses: passportxyz/gh-workflows/.github/actions/prepare_deploy_to_aws@v3
       - name: Preview Deploy
@@ -183,6 +188,11 @@ jobs:
           cd infra/scripts/verifier_sweep
           yarn install --frozen-lockfile
           yarn build
+      - name: Build Auto Credits Service
+        run: |
+          cd infra/scripts/auto_credits
+          npm install
+          npm run build
       - name: Prepare to Deploy to AWS
         uses: passportxyz/gh-workflows/.github/actions/prepare_deploy_to_aws@v3
       - name: Deploy to AWS
